# ar8s

./: .gitignore  CMakeLists.txt  README.md  build.bat
configs/: services.json  settings.json
lib/MyCurl/include/: MyCurl.hpp
lib/MyCurl/lib/: MyCurl_x64.lib
src/: main.cpp
src/ConfigParser/: ConfigParser.cpp  ConfigParser.hpp
src/Executor/: Executor.cpp  Executor.hpp
src/Executor/handler/request/: request_handler.hpp
src/Executor/helper/vector/: vector_helper.hpp
src/JsonParser/: JsonParser.hpp
src/Parser/ConfigParser/: ConfigParser.cpp  ConfigParser.hpp
src/Parser/JsonParser/: JsonParser.cpp  JsonParser.hpp
src/Parser/ServiceParser/: ServiceParser.cpp  ServiceParser.hpp
src/Parsers/Base/: JsonParser.cpp  JsonParser.hpp
src/Parsers/Config/: ConfigParser.cpp  ConfigParser.hpp
src/Parsers/Service/: ServiceParser.cpp  ServiceParser.hpp
src/Parsers/Settings/: SettingsParser.cpp  SettingsParser.hpp
src/Service/: Service.hpp
src/ServiceExecutor/: ServiceExecutor.cpp  ServiceExecutor.hpp
src/ServiceParser/: ServiceParser.cpp  ServiceParser.hpp
src/TelegramBot/: TelegramBot.cpp  TelegramBot.hpp
src/backend/executor/: Executor.cpp  Executor.hpp
src/backend/executor/handler/request/: request_handler.cpp  request_handler.hpp
src/backend/executor/helper/vector/: vector_helper.hpp
src/backend/parser/config/parser/: config_parser.cpp  config_parser.hpp
src/backend/parser/service/: service.cpp  service.hpp
src/backend/parser/service/parser/: service_parser.cpp  service_parser.hpp
src/backend/parser/settings/parser/: settings_parser.cpp  settings_parser.hpp
src/frontend/telegram/bot/: telegram_bot.cpp  telegram_bot.hpp
src/frontend/telegram/bot/executor/: bot_executor.cpp  bot_executor.hpp
src/frontend/telegram/chat/input/format/: input_format.cpp  input_format.hpp
src/frontend/telegram/chat/input/processor/: input_processor.cpp  input_processor.hpp
src/frontend/telegram/chat/input/validator/: input_validator.cpp  input_validator.hpp
src/frontend/telegram/chat/message/handler/: message_handler.cpp  message_handler.hpp
src/frontend/telegram/connection/listener/: connection_listener.cpp  connection_listener.hpp
src/frontend/telegram/connection/manager/: connection_manager.cpp  connection_manager.hpp
src/frontend/telegram/event/handler/: event_handler.cpp  event_handler.hpp
src/frontend/telegram/user/data/: user_data.cpp  user_data.hpp
src/frontend/telegram/user/input/: user_input.cpp  user_input.hpp
src/frontend/telegram/user/status/: input_status.cpp  input_status.hpp
src/frontend/telegram/user/status/executor/: executor_status.cpp  executor_status.hpp
src/frontend/telegram/user/status/input/: input_status.cpp  input_status.hpp
src/main/: main.cpp
src/parser/config/parser/: config_parser.hpp
src/parser/service/: service.hpp
src/parser/service/parser/: service_parser.cpp
src/parser/settings/: settings.hpp
src/parser/settings/parser/: settings_parser.cpp  settings_parser.hpp
src/telegram/bot/: TelegramBot.cpp  TelegramBot.hpp  telegram_bot.cpp  telegram_bot.hpp
src/telegram/bot/executor/: bot_executor.cpp  bot_executor.hpp
src/telegram/chat/: MessageHandler.cpp  MessageHandler.hpp
src/telegram/chat/handler/phone/: phone.cpp  phone.hpp
src/telegram/chat/input/handler/phone/: phone_handler.cpp
src/telegram/chat/input/processor/: input_processor.cpp  input_processor.hpp
src/telegram/chat/message/handler/: message_handler.cpp  message_handler.hpp
src/telegram/chat/validator/string/: string.cpp  string_validator.hpp
src/telegram/event/: EventHandler.cpp  EventHandler.hpp  event_handler.cpp  event_handler.hpp
src/telegram/event/user/status/input/: input_status.cpp  (+1 more)
src/telegram/user/data/: user_data.cpp  user_data.hpp
src/telegram/user/input/: user_input.cpp  user_input.hpp
src/telegram/user/status/executor/: executor_status.cpp  executor_status.hpp
(+3 files in other folders)
